feat: Complete Routine Management and Focus Mode with bug fixes
Features Added:
- Complete routine management system with time-based scheduling
- Enhanced routine UI with vibrant colors and intuitive design
- Single-session Focus Mode (no automatic Pomodoro cycling)
- Custom session duration (5-120 min default, 1-180 custom)
- User confirmation required after session completion
- Screen lock mechanism during focus sessions
- Alarm sound with vibration on session completion
- Task integration with focus sessions
- Firebase Firestore integration for routines and focus sessions

Bug Fixes:
- Fixed settings modal crashes (removed DraggableScrollableSheet)
- Fixed slider assertion error with triple value clamping
- Fixed navigation state management (bottom nav 'Coming Soon' issue)
- Added proper async/await for navigation with state reset
- Isolated settings modal state to prevent conflicts

Technical Improvements:
- Added audioplayers ^6.0.0 and vibration ^2.0.0 packages
- Added VIBRATE permission in AndroidManifest.xml
- Created separate StatefulWidget for settings modal
- Implemented proper value validation and clamping
- Updated Firestore security rules for routines and focus_sessions

Files Modified:
- lib/screens/focus_screen.dart (major refactor)
- lib/screens/home_screen.dart (navigation fixes)
- lib/screens/routine_screen.dart (new)
- lib/screens/add_routine_screen.dart (new)
- lib/models/focus_session_model.dart (new)
- lib/models/routine_model.dart (new)
- lib/services/focus_service.dart (new)
- lib/services/routine_service.dart (new)
- android/app/src/main/AndroidManifest.xml
- firestore.rules
- pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
   intl: ^0.18.0
   shared_preferences: ^2.3.2
   google_fonts: ^6.2.0
-  uuid: ^3.0.6   # <-- add this line
+  uuid: ^3.0.6
+  audioplayers: ^6.0.0
+  vibration: ^2.0.0
 
 dev_dependencies:
   flutter_test:
