--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Required for vibration -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    
     <application
         android:label="StudyBuddy"
         android:name="${applicationName}"
