feat: Add comprehensive study app features
Major Features:
- Focus session with Pomodoro timer, session persistence, and restoration
- Task-specific statistics showing session counts and time per task
- Modern profile UI with gradient avatar and modal bottom sheet
- Extra-curricular activities tracking with 8 categories
- Real-time Study Hours card including active and completed sessions
- Auto sign-out navigation to landing page with auth state listener

Focus Session:
- Session restoration when navigating away and back
- Active session subscription to sync UI with Firestore state
- Enhanced statistics modal with per-task breakdown
- Improved alarm feedback with vibration patterns
- Debug logging for session tracking

Home Screen:
- Study Hours now streams today's sessions and includes elapsed time for active sessions
- Profile modal with Edit Profile, Notifications, Appearance, Privacy, Help, About
- Sign out confirmation with safe navigation
- Error handling for permission-denied and index-required states
- Extra-curricular activities summary with category badges

Services & Data:
- FocusService: getStats() and getTaskStats() now include active sessions
- ActivityService: track sports, music, art, reading, dance, photography, coding, volunteering
- TaskService: enhanced logging for debugging
- Firestore indexes for focus_sessions and activities collections

Infrastructure:
- Android permissions: INTERNET, ACCESS_NETWORK_STATE
- Firestore security rules for activities collection
- Auth state listener prevents lingering on Home after sign-out
- Root navigator usage prevents context disposal crashes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/sounds/
 
 # Splash Screen Configuration (Simple, no logo needed)
 flutter_native_splash:
