--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   uuid: ^3.0.6
   audioplayers: ^6.0.0
   vibration: ^2.0.0
+  youtube_player_flutter: ^9.0.3
+  http: ^1.2.0
+  url_launcher: ^6.2.0
 
 dev_dependencies:
   flutter_test:
