feat: Add Balance Your Life - Prayer Time Integration with real-time countdown and notifications
- Added 5 new files: prayer models, services (calculation & notifications), and 2 UI screens
- Implemented location-based prayer time calculation using Adhan package (offline-first)
- Created beautiful Islamic-themed UI (green/blue/gold) with animated countdown timer
- Individual notification toggles for each prayer (Fajr, Dhuhr, Asr, Maghrib, Isha)
- Customizable reminder times (5-30 minutes before) with adhan sound and vibration options
- Real-time countdown timer with pulsing animation on next prayer card
- Smart caching with SharedPreferences for offline functionality
- Motivational Islamic quotes and Hadith for spiritual encouragement
- Complete settings screen with test notification feature
- Added Android/iOS permissions for location and notifications
- Updated dependencies: adhan ^2.0.0, geolocator ^13.0.0, permission_handler ^11.3.0, timezone ^0.9.2
- Fixed dependency conflicts (upgraded uuid to ^4.5.2)
- Fixed text overflow issue in prayer times list
- Navigation wired from dashboard through existing 'Balance Your Life' card
- Comprehensive documentation added (BALANCE_YOUR_LIFE_SETUP.md)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,17 @@
     <!-- Required for vibration -->
     <uses-permission android:name="android.permission.VIBRATE" />
     
+    <!-- Required for location services (Prayer times) -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    
+    <!-- Required for notifications (Android 13+) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    
+    <!-- Required for exact alarm scheduling (Prayer notifications) -->
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+    
     <application
         android:label="StudyBuddy"
         android:name="${applicationName}"
