--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,16 @@ dependencies:
   intl: ^0.18.0
   shared_preferences: ^2.3.2
   google_fonts: ^6.2.0
-  uuid: ^3.0.6
+  uuid: ^4.5.2
   audioplayers: ^6.0.0
   vibration: ^2.0.0
   youtube_player_flutter: ^9.0.3
   http: ^1.2.0
   url_launcher: ^6.2.0
+  adhan: ^2.0.0
+  geolocator: ^13.0.0
+  permission_handler: ^11.3.0
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
