--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
     
+    <!-- Required to keep timer running when screen is off -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    
     <application
         android:label="StudyBuddy"
         android:name="${applicationName}"
