--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   geolocator: ^13.0.0
   permission_handler: ^11.3.0
   timezone: ^0.9.2
+  wakelock_plus: ^1.2.0
 
 dev_dependencies:
   flutter_test:
